[project]
name = "nekocode-helloworld"
version = "0.1.0"
description = "由Poetry构建的Python版本HelloWorld实现"
authors = [
    {name = "Neko_Code"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[tool.poetry]
packages = [
    {include = "HelloWorld", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "HelloWorld:main"
